# sheaf-tp53-benchmark

./: .gitignore  LICENSE  README.md  RESULTS.md  pyproject.toml
data/: gambardella_tp53_status.csv
data/preprocessed/: ccle_tp53_hvg300.npz  gambardella_hvg100.npz
hpc/: run_on_hpc.sh
results/: benchmark_leaky_leaky_20260602_014356.json  oof_ccle_final_20260602_191847.json  oof_hpc_ccle_20260603_114100.json  oof_r5_20260601_205710.json
scripts/: build_gambardella_labels.py  hpc_validate.sbatch  make_figure.py  oof_stats.py  prep_ccle.py  prep_gambardella.py  run_oof.py
src/sheaf_tp53/: __init__.py  _sheaf.py  cv.py  graph.py  models.py  oof.py  seeds.py  splits.py
tests/: test_smoke.py
