[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sheaf-tp53-benchmark"
version = "0.1.0"
description = "Honest, leakage-free benchmark of Neural Sheaf Diffusion vs GCN/GAT for TP53-status prediction from cell-line RNA-seq"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Gabriele Bambini" }]
dependencies = [
    "torch>=2.0",
    "numpy>=1.23",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "pandas>=2.0",
    "matplotlib>=3.6",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
